# analisis_evolucion_generacion_energia_electrica_estados_unidos

./: README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: comanche_ferc1_annual.csv  data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md  model_report.md
scripts/: app_streamlit.py
scripts/app/: main.py
scripts/data_acquisition/: main.py
scripts/eda/: main.py
scripts/preprocessing/: main.py  pudl_path.txt
scripts/training/: main.py
