[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nombre_paquete"
version = "0.1.0"
authors = [{ name = "autor1", email = "correo@correo.com" }]
description = "Descripción del proyecto"
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pandas",
  "numpy",
  "sqlalchemy",
  "matplotlib",
  "seaborn",
  "scikit-learn",
  "kagglehub"   # opcional; quítalo si no descargarás desde Kaggle
]

[tool.setuptools.packages.find]
where = ["src/"]
